# Portable-Alpha-Extension-Model

./: .ci_heartbeat  .gate_ping  .gate_smoke  .gate_test  .gitattributes  .gitignore  .pre-commit-config.yaml  .project_modules.txt  00‑Roadmap.md  ANALYSIS_MODE_DISCOVERY.md  AUTOMATION_QUICK_START.md  Agents.md  CHANGELOG.md  CLAUDE.md  CODEX_GUIDELINES.md  CODEX_IMPLEMENTATION_SPEC.md  CODEX_TUTORIAL_INSTRUCTIONS.md  COMPLETE_TUTORIAL_TESTING_SUMMARY.md  CONTRIBUTING.md  DEMO_TESTING_LOG.md  DEVELOPMENT_STATUS.md  DEVELOPMENT_WORKFLOW.md  Data‑Privacy.md  FIX_SUMMARY.md  FUNCTIONALITY_GAP_ANALYSIS.md  Home.md  INSTRUCTIONS_FOR_CODEX.md  ISSUES_BACKLOG.md  Issues.txt  LICENSE  MANUAL_MODULE_SETUP_FIXES.md  Makefile  Outputs.parquet  Outputs.xlsx  PARAMETER_GUIDE.md  PARAMETER_SWEEP_STATUS_REPORT.md  PR_TEMPLATE.md  Phase‑A‑Intake.md  Phase‑B‑Cleaning.md  Phase‑C‑Dataset.md  (+85 more)
.agents/: issue-1175-ledger.yml  issue-1183-ledger.yml  issue-1184-ledger.yml  issue-1185-ledger.yml  issue-1186-ledger.yml  issue-1187-ledger.yml  issue-1191-ledger.yml  issue-1192-ledger.yml  issue-1193-ledger.yml  issue-1194-ledger.yml  issue-1374-ledger.yml  issue-1375-ledger.yml  issue-1377-ledger.yml  issue-1378-ledger.yml  issue-1380-ledger.yml  issue-1383-ledger.yml  issue-1408-ledger.yml  issue-1409-ledger.yml  issue-1413-ledger.yml
.devcontainer/: README.md  devcontainer.json  setup.sh  vscode-settings.json
.github/: CODEOWNERS  CODEX_SETUP.md  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md  reference_packs.json
.ipynb_checkpoints/: Portable_Alpha_Vectors-checkpoint.ipynb  Portable_Alpha_Visualizations-checkpoint.ipynb  README-checkpoint.md
.streamlit/: config.toml
Old/: PA_variables_parameters.csv  PortAlphaRefactorInst.ipynb  Portable_Alpha.ipynb  Portable_Alpha_Updated.ipynb  Portable_Alpha_Visualizations.ipynb
Templates/: Meeting‑Notes.md  Task‑Checklist.md
agents/: auto-pilot-1115.md  auto-pilot-1127.md  auto-pilot-963.md  auto-pilot-964.md  auto-pilot-965.md  auto-pilot-966.md  codex-1048.md  codex-1050.md  codex-1057.md  codex-1060.md  codex-1065.md  codex-1071.md  codex-1072.md  codex-1073.md  codex-1079.md  codex-1081.md  codex-1083.md  codex-1086.md  codex-1088.md  codex-1090.md  codex-1104.md  codex-1132.md  codex-1166.md  codex-1195.md  codex-1198.md  codex-1204.md  codex-1212.md  codex-1222.md  codex-1380.md  codex-1387.md  codex-1393.md  codex-1396.md  codex-1400.md  codex-1401.md  codex-1403.md  codex-1416.md  codex-1421.md  codex-2016.md  codex-600.md  codex-601.md  (+80 more)
config/: alpha_shares_mode_template.csv  ci_smoke.yml  config_theme.yaml  config_thresholds.yaml  margin_schedule_template.csv  parameters_template.csv  params_agents_generic.yml  params_template.yml  returns_mode_template.csv  scenario_capital_focus.csv  scenario_returns_focus.csv  scenario_volatility_focus.csv  vol_mult_mode_template.csv
dashboard/: app.py  browser_exports.py  cli.py  glossary.py  theme.py  utils.py  validation_ui.py
data/: __init__.py
docs/: AUTOMATED_DEBUGGING.md  Agents.md  COVERAGE_GAPS.md  DATA_IMPORT_SPEC.md  INSTRUCTIONS_FOR_CODEX.md  MIGRATION_NOTES.md  PORTABLE_ZIP_GUIDE.md  UserGuide.md  baseline-kit-dependency.md  cli_usage_guide.md  conf.py  constraints.md  index.rst  llm_features.md  pa_core_facade.md  portable-zip.md  primer.md  reference_packs.md
examples/: portfolio_constraints.py
notebooks/: Portable_Alpha_Vectors.ipynb  Portable_Alpha_Vectors.py
pa_core/: __init__.py  __main__.py  backend.py  calibration.py  cli.py  config.py  contracts.py  covariance.py  facade.py  fees.py  io.py  logging_utils.py  manifest.py  metrics.py  multi_objective.py  orchestrator.py  pa.py  portfolio.py  presets.py  random.py  regime_presets.py  reporting.py  run_artifact_bundle.py  run_flags.py  scenario_registry.py  schema.py  sensitivity.py  share_utils.py  simulations.py  sleeve_suggestor.py  stress.py  sweep.py  tool_descriptor.py  types.py  units.py  validate.py  validators.py  wizard_schema.py
plots/: path_dist.html  risk_return.html  sharpe_ladder.html  summary.html  summary.pptx
scripts/: __init__.py  agent_quickstart.py  capture_wizard.py  ci_history.py  ci_metrics.py  create_launchers.py  debug_codex_pr.py  debug_codex_pr_new.py  debug_codex_pr_old.py  debug_github_first.py  fetch_offline_web_runtime.py  launch_dashboard.bat  launch_dashboard.sh  make_portable_zip.py  model_config_ui_gap.py  scenario_grid.py  security_demo.py  settings_effectiveness.py  streamlined_debug.py  sync_dev_dependencies.py  sync_test_dependencies.py  test_minimal.py  tutorial_9_test.py  validate_dependency_test_setup.py  validate_lockfile.py  visualise.py
templates/: parameters_template.csv  params_template.yaml  readme.md  scenario_example.yaml  scenario_template.yaml
tests/: conftest.py  cvar_diagnostics.py  expected_cli_outputs.py  test_active_share_transfer_coefficient.py  test_agents.py  test_asset_library_exception_handling.py  test_attribution_reporting.py  test_backend_cli_integration.py  test_backend_selection.py  test_backend_selection_refactor.py  test_calibration_module.py  test_ci_metrics.py  test_cli.py  test_cli_commands.py  test_cli_edge_cases.py  test_cli_exception_handling.py  test_cli_orchestrator_consistency.py  test_cli_output_constants.py  test_cli_packet_diff.py  test_cli_return_distribution.py  test_cli_sensitivity.py  test_cli_validate_only.py  test_compare_runs.py  test_config.py  test_config_chat.py  test_config_chat_preview_apply_revert.py  test_config_enhanced_validation.py  test_config_patch_roundtrip.py  test_config_validation_paths.py  test_console.py  test_contracts.py  test_covariance_psd.py  test_create_launchers.py  (+156 more)
(+283 files in other folders)
