[tool.ruff]
line-length = 88
extend-ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pa_core*", "archive*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portable-alpha-extension-model"
version = "0.1.0"
description = "Portable alpha plus active extension model"
authors = [{ name = "Your Name" }]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "pydantic",
    "rich",
]

