[tool.ruff]
line-length = 88
extend-exclude = ["archive/*"]

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pa_core", "dashboard"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts = "--cov=pa_core --cov-report=html --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["pa_core*", "archive*", "scripts*", "dashboard*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portable-alpha-extension-model"
version = "0.1.0"
description = "Portable alpha plus active extension model"
authors = [
    { name = "Portable Alpha Extension Model Developers" },
]
maintainers = [
    { name = "Portable Alpha Extension Model Maintainers", email = "maintainers@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "pydantic",
    "rich",
    "plotly>=5.19",
    "kaleido",
    "streamlit>=1.35",
    "python-pptx",
    "xlsxwriter",
    "PyYAML>=6",
    "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
# Optional extras
parquet = [
    "pyarrow",
]

[project.scripts]
pa = "pa_core.pa:main"
pa-validate = "pa_core.validate:main"
pa-convert-params = "pa_core.data.convert:main"
pa-dashboard = "dashboard.cli:main"
pa-make-zip = "scripts.make_portable_zip:main"
pa-create-launchers = "scripts.create_launchers:main"
