[tool.ruff]
line-length = 100
extend-exclude = ["archive/*", "build/*", "dist/*"]

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["pa_core", "dashboard"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "no-redef"]
exclude = [
    "^(?!pa_core/).*",
    "archive/",
    "tests/",
    "scripts/",
    "dashboard/",
    "build/",
    "dist/",
    "docs/",
    "tutorials/",
]

[[tool.mypy.overrides]]
module = [
    "archive",
    "archive.*",
    "dashboard",
    "dashboard.*",
    "scripts",
    "scripts.*",
    "tests",
    "tests.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pa_core*", "archive*", "scripts*", "dashboard*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portable-alpha-extension-model"
version = "0.1.0"
description = "Portable alpha plus active extension model"
authors = [{ name = "Portable Alpha Extension Model Developers" }]
maintainers = [
    { name = "Portable Alpha Extension Model Maintainers", email = "maintainers@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "pydantic",
    "rich",
    "plotly>=5.19",
    "kaleido",
    "streamlit>=1.35",
    "python-pptx",
    "xlsxwriter",
    "PyYAML>=6",
    "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
# Optional extras
app = []
parquet = ["pyarrow"]
llm = [
    "langchain==1.2.0",
    "langchain-core==1.2.8",
    "langchain-openai==1.1.0",
    "langchain-anthropic==0.3.21",
    "langsmith==0.6.8",
    "pydantic==2.12.5",
    "requests==2.32.5",
]

# Development dependencies
dev = [
    "ruff==0.15.1",
    "black>=26.1.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.115.1",
    "pre-commit",
    "bandit",
    "types-PyYAML",
    "flake8",
    "docformatter>=1.7.7",
]

# Documentation dependencies
docs = [
    "sphinx",
    "sphinx-rtd-theme>=2.0",
    "nbsphinx",
]

# Build dependencies
build = [
    "build",
    "twine",
]

# Jupyter/notebook dependencies
notebook = [
    "jupyter",
    "jupyterlab",
    "ipywidgets",
    "jupyter-contrib-nbextensions",
]

# All dev dependencies combined - when using --extra all, all extras are already included
all = []

[project.scripts]
pa = "pa_core.pa:main"
pa-validate = "pa_core.validate:main"
pa-convert-params = "pa_core.data.convert:main"
pa-dashboard = "dashboard.cli:main"
pa-make-zip = "scripts.make_portable_zip:main"
pa-create-launchers = "scripts.create_launchers:main"
